# process-monitor

./: .gitattributes  .gitignore  .mcp.json  .npmrc  .prettierignore  .prettierrc.json  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: actions.rs  config.rs  error.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: logs.rs  mod.rs  processes.rs  rules.rs  system.rs  triggers.rs  windows.rs
src-tauri/src/monitor/: condition.rs  dispatcher.rs  history.rs  mod.rs  name_resolve.rs  service_map.rs  snapshot.rs
src/api/: tauri-commands.ts
src/components/: ActionPromptDialog.vue  ConfirmDialog.vue  DashboardOverview.vue  LogViewer.vue  PaginationBar.vue  ProcessDashboard.vue  ProcessDetailModal.vue  RuleFormModal.vue  RuleList.vue  SettingsPanel.vue  TrendChart.vue
src/components/__tests__/: ConfirmDialog.test.ts  (+4 more)
src/composables/: useActionFlags.ts  useAlertCountdown.ts  useConditionForm.ts  useInvokeWithError.ts  useLogFilters.ts  useProcessFilters.ts  useProcessSelector.ts  useRefreshTimer.ts  useTrendChart.ts  useTrendDerived.ts
src/locales/: en.json  index.ts  zh-CN.json
src/stores/: monitor.ts  process.ts  rule.ts  ui.ts
src/test/: setup.ts
src/types/: index.ts
src/utils/: alertFormat.ts  errors.ts  ruleFormCondition.ts
src/views/: AlertWindow.vue  NotificationToast.vue
(+30 files in other folders)
